# FCCLatticeProtein

./: CMakeLists.txt  README.md  cLatticeModel.cpp  cLatticeModel.h  cMonteCarloMover.cpp  cMonteCarloMover.h  main.cpp
GL/: GlutFramework.cpp  GlutFramework.h
